# mimi2

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agent.py  database.py  db_manager.py  discord_bot.py  docker-compose.yml  main.py  message_splitter.py  pyproject.toml  run_tests.sh  system_prompt.md  system_prompt.txt  test_api.py  test_config.py  test_database.py  test_final_verification.py  test_imports.py  test_integration.py  test_message_splitter.py  test_requirements_verification.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: import.py  schema.py  search.py
k8s/: deployment.yaml
